# cmhc-hmip-python

./: .gitignore  DATA_DISCOVERY.md  INSTRUCTIONS.md  PLAN.md  PROGRESS.md  README.md  RESEARCH.md  RESEARCH_MAPPING.md  pyproject.toml
app/reflex/: rxconfig.py
app/reflex/cmhc_portal/: cmhc_portal.py  data.py  pages.py  state.py
app/reflex/reflex.lock/: package.json
app/shiny/: app.py  charts_page.py  cma_map_page.py  data.py  map_page.py
data/: static_catalogue.json
docs/: DATAMART.md  DATA_DISCOVERY.md  INSTRUCTIONS.md  PLAN.md  PROGRESS.md  RESEARCH.md
scripts/: build_boundaries.py  build_dmt_rental.py  build_parquet.py  build_static_catalogue.py  build_static_parquet.py  download_static.py  example_queries.py  extract_geo_lookups.py  probe_table.py  pull_canada_and_provinces.py  pull_cmas.py  pull_csds.py  pull_cts.py
src/cmhc/: __init__.py  bulk.py  catalogue.py  config.py  geographies.py  hmip.py  tidy.py  validity.py  wide.py
src/cmhc/data/: cmas.csv  csds_ontario.csv  csds_ontario_cma_members.csv  cts_ontario.csv
src/cmhc/static/: __init__.py  catalogue.py  matrix.py  runner.py  schema.py  specs.py
tests/: test_catalogue.py  test_geographies.py  test_hmip.py  test_static_matrix.py  test_tidy.py  test_validity.py
tests/fixtures/: rms_vacancy_vancouver.csv
